crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__forward_error_INVALID.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&forward_error"
---
NotFound {
    code: "INVALID",
    system: Icd10Cm,
}
