crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__forward_error_X999.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&forward_error"
---
NotFound {
    code: "X999",
    system: Icd10Cm,
}
