crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__lookup_I10.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&lookup_result"
---
Code {
    system: Icd10Cm,
    code: "I10",
    description: "Essential (primary) hypertension",
}
