crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__lookup_J45909.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&lookup_result"
---
Code {
    system: Icd10Cm,
    code: "J45.909",
    description: "Unspecified asthma, uncomplicated",
}
