crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__lookup_error_.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&lookup_error"
---
NotFound {
    code: "",
    system: Icd10Cm,
}
